--- a/Veille/template.html
+++ b/Veille/template.html
@@ -89,7 +89,7 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/airtable.browser.js"></script>
     <script src="assets/js/script.js"></script>
-    <script src="assets/js/afficher.js"></script>
+    <!-- <script src="assets/js/afficher.js"></script> -->
     <script src="assets/js/veille.js"></script>
 </body>
 
